# explore_interactive_fictions

./: README.md  main.py  pyproject.toml
data/for_edge_extraction/: LW01_calibration.json  LW01_calibration_1.json  LW01_calibration_2.json  LW01_calibration_edges_gold.csv  LW01_calibration_edges_gold_2.csv  LW01_calibration_gold_1.json  LW01_for_edges_extraction.json  LW01_section_gold_list.txt
docs/: annoted_edges.md  gamebook_data_schema.md  gamebook_mechanics.md  server_utilisation.md  utilisation_dcsr-llm.md  utilisation_server.md
results/curnagl_results/: extract_1_Qwen_Qwen3.6-27B_LW01_calibration_results.json  extract_2_Qwen_Qwen3.6-27B_LW01_calibration_quarantine.jsonl  extract_2_Qwen_Qwen3.6-27B_LW01_calibration_results.json  extract_3_Qwen_Qwen3.6-27B_LW01_calibration_config.json  extract_3_Qwen_Qwen3.6-27B_LW01_calibration_quarantine.jsonl  extract_3_Qwen_Qwen3.6-27B_LW01_calibration_results.json  extract_4_Qwen_Qwen3.6-27B_LW01_calibration_results.json  extract_Qwen_Qwen3-8B_LW01_calibration_config.json  extract_Qwen_Qwen3-8B_LW01_calibration_results.json  extract_Qwen_Qwen3.6-27B_LW01_calibration_config.json
results/curnagl_results/csv/: LW01_calibration_edges.csv  LW01_calibration_edges_2.csv  LW01_calibration_edges_3.csv  LW01_calibration_edges_4.csv  LW01_calibration_edges_5.csv  LW01_calibration_edges_6.csv  LW01_calibration_edges_final.csv  rapport_erreurs_1.csv  rapport_erreurs_2.csv  (+4 more)
scripts/: 1_parse_for_edge_extraction.py  2_prepare_edge_extraction.py  parse_gamebook.py  parse_test.py
scripts/utils/: eval_diff.py  gold_json_to_csv.py
(+357 files in other folders)
