[project]
name = "explore-interactive-fictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "mypy>=2.1.0",
    "ruff>=0.15.14",
]
