[project]
name = "explore-interactive-fictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "mypy>=2.1.0",
    "ruff>=0.15.14",
]

[tool.ruff.lint]
# E/F: Règles de base, I: Tri des imports, ANN: Force la présence des types hints
select = ["E", "F", "I", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"] # Ignore self, cls et l'obligation de Any

[tool.mypy]
disallow_untyped_defs = true # Interdit de valider une fonction non typée dans src/
ignore_missing_imports = true # Évite les alertes sur les librairies tierces sans types
